--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <img src="images/india-daily-logo.jpg" alt="India Daily" class="logo" />
   </header>
 
-    
+    <!-- test change -->
+
   <!-- ***********************************
        🔴 NAVIGATION BAR (HOME + MENU)
        *********************************** -->
