--- a/footer/footer.html
+++ b/footer/footer.html
@@ -72,7 +72,8 @@
     <div class="ft-inner">
       <div class="brand" aria-hidden="false">
         <!-- change path if your logo is elsewhere -->
-        <img src="/footer/india-daily-logo.jpg" alt="India Daily logo (change path if needed)">
+        <img src="footer/india-daily-logo.jpg" alt="India Daily logo">
+
         <div class="txt">
           <div style="font-weight:800;color:#fff;margin-bottom:5px">India Daily</div>
           India Daily – भरोसेमंद खबरें, हर पल।
