Update: CSS changes

--- a/footer/footer.html
+++ b/footer/footer.html
@@ -109,7 +109,7 @@
 
     <div class="ft-bottom" role="contentinfo">
       Copyright © All rights reserved. <span id="footerYear"></span> India Daily Live
-      <div class="back-top" id="footerBack" title="Back to top">↑</div>
+      <!-- <div class="back-top" id="footerBack" title="Back to top">↑</div> -->
     </div>
   </div>
 
